# tts-warehouse

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml  run.py
src/: __init__.py  config.py  main.py
src/database/: __init__.py  models.py  repository.py
src/parsers/: __init__.py  article.py  royal_road.py  rss_feed.py
src/services/: __init__.py  content_service.py  icon_generator.py  job_queue.py  rss_generator.py  summary_service.py
src/tts/: __init__.py  engine.py  kokoro_api.py  openai_tts.py  unrealspeech.py
src/web/: __init__.py  auth.py  routes.py
src/web/static/: app.js  index.html  login.html  styles.css
tests/: __init__.py  test_api.py  test_database.py  test_parsers.py
